# CPP_QT

.qt/: QtDeploySupport.cmake
.qtc_clangd/: compile_commands.json
AddressForm/: CMakeLists.txt  widget.cpp  widget.h
BarChart4/: Barchart4.pro  CMakeLists.txt  widget.cpp  widget.h  widget.ui
CaloryCounterAuto/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
CaloryCounterManual/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
Covid19RegistrationSystem3_wColor/: CMakeLists.txt  Covid19RegistrationSystem3.pro  Covid19RegistrationSystem3.pro.user.1930579  Covid19RegistrationSystem3.pro.user.a6ec8d1  Makefile  adminlogs.cpp  adminlogs.h  adminlogs.ui  adminmain.cpp  adminmain.ui  adminreports.h  adminreports.ui  adminuserdetail.h  adminuserdetail.ui  adminuserdetail3.cpp  adminuserdetail3.h  adminuserdetail3.ui  adminusers.h  adminusers.ui  database.cpp  database2.db  landingpage.cpp  landingpage.ui  login.cpp  login.h  login.ui  main.cpp  moc_adminlogs.cpp  moc_adminmain.cpp  moc_adminreports.cpp  moc_adminuserdetail3.cpp  moc_adminusers.cpp  moc_landingpage.cpp  moc_login.cpp  moc_signup.cpp  moc_usercovid19testresult.cpp  moc_userpage.cpp  moc_userprofile.cpp  moc_userreportissue.cpp  moc_userreportratresult.cpp  (+37 more)
Covid19RegistrationSystem3_wColor/Covid19RegistrationSystem3.app/Contents/MacOS/: Covid19RegistrationSystem3
Covid19RegistrationSystem3_wColor/build-Covid19RegistrationSystem3-Desktop_x86_darwin_generic_mach_o_64bit-Release/: Makefile  ui_adminlogs.h  ui_landingpage.h  ui_signup.h  ui_usercovid19testresult.h  ui_userprofile.h  ui_userreportissue.h  ui_userreportratresult.h  ui_uservaccinationresult.h
Covid19RegistrationSystem3_wColor/build-Covid19RegistrationSystem3-Desktop_x86_darwin_generic_mach_o_64bit-Release/.qtc_clangd/: compile_commands.json
Covid19RegistrationSystem3_wColor/build-Covid19RegistrationSystem3-Desktop_x86_darwin_generic_mach_o_64bit-Release/.qtc_clangd/.cache/clangd/index/: QAbstractAxis.8356D9545D179E86.idx  QAbstractBarSeries.C3D89C06D3F158A8.idx  QAction.811D83BDF459FB0D.idx  QBarCategoryAxis.BCED3EC1DC198262.idx  QBrush.FFE6899550EC672D.idx  QButtonGroup.0252AEFE73ADF7FF.idx  QChart.0F0383F20A265631.idx  QChartView.3134AECC87A3328B.idx  QCheckBox.DE92048EE08464D0.idx  QDateEdit.C3365A73D2919761.idx  QDialog.16B3C8D40EA1151B.idx  QDialog.685E3D1A7599FC6A.idx  QFont.1D842424640FE9DE.idx  QFormLayout.7042EECA2A7CA745.idx  QGridLayout.2D216B9D79EFA576.idx  QHBoxLayout.14C01322769B52C2.idx  QLayout.7F12461762AB274A.idx  QLegend.BE2C176E278CD31E.idx  QPen.196D35C992A2A783.idx  QPercentBarSeries.CC111C46D8B54C56.idx  QPushButton.6B3E80A2B11AC6CD.idx  QPushButton.747C1C3C9E376180.idx  QRandomGenerator.B4542137E6D53FBC.idx  QRegularExpression.10ECC01452E584DD.idx  QRegularExpressionValidator.A05DE173D843216F.idx  QScrollArea.FB24425B886174BC.idx  QSpacerItem.4A73869B9176D9E4.idx  QSql.41F180D549DFD009.idx  QSqlDatabase.70C57AFE2271039E.idx  QSqlError.7C5E039B574A7786.idx  QSqlQueryModel.DC4D547CC1FEE6B8.idx  QStackedBarSeries.7B5841EE14847E97.idx  QString.3ED81DDBD3BA0FEA.idx  QStringList.04E26F35D9021EEE.idx  QTableView.1A7F23C92B4E8AA3.idx  QTextEdit.54804D1636FC4EA4.idx  QVBoxLayout.32559606F670D591.idx  QVBoxLayout.764757A4336D08A9.idx  adminlogs.cpp.1D6365397E79CFFF.idx  adminlogs.h.BB3625DF0F9E42FD.idx  (+103 more)
(+2065 files in other folders)
